tests/idris2/interface013/expected
1/1: Building TypeInt (TypeInt.idr)
Error: While processing constructor MkRecord. Can't find an implementation for Interface ?s.

TypeInt.idr:14:25--14:49
    |
 14 |   MkRecord : Value s -> DependentValue {s} value -> Record s
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^

